--- a/dj_config_updates.json
+++ b/dj_config_updates.json
@@ -3,6 +3,9 @@ addDataSource DJ-HRF
 
 addEntityType PERSON
 addEntityType ORGANIZATION
+addEntityType VESSEL
+addEntityType AIRCRAFT
+
 
 addFeature  {"feature": "DJ_PROFILE_ID", "class": "ISSUED_ID", "behavior": "F1E", "anonymize": "No", "candidates": "Yes", "standardize": "", "expression": "", "comparison": "EXACT_COMP", "elementList": [{"element": "ID_NUM", "expressed": "No", "compared": "Yes"}]}
 addAttribute {"attribute": "DJ_PROFILE_ID", "class": "IDENTIFIER", "feature": "DJ_PROFILE_ID", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
@@ -19,6 +22,18 @@ addAttribute {"attribute": "CRD_NUMBER", "class": "IDENTIFIER", "feature": "CRD_
 addFeature  {"feature": "COMPANY_ID", "class": "ISSUED_ID", "behavior": "F1E", "anonymize": "No", "candidates": "Yes", "standardize": "PARSE_ID", "expression": "EXPRESS_ID", "comparison": "ID_COMP", "elementList": [{"element": "ID_NUM", "expressed": "No", "compared": "No"}, {"element": "COUNTRY", "expressed": "No", "compared": "Yes"}, {"element": "ID_NUM_STD", "expressed": "Yes", "compared": "Yes"}]}
 addAttribute {"attribute": "COMPANY_ID_NUMBER", "class": "IDENTIFIER", "feature": "COMPANY_ID", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
 addAttribute {"attribute": "COMPANY_ID_COUNTRY", "class": "IDENTIFIER", "feature": "COMPANY_ID", "element": "COUNTRY", "required": "No", "default": "", "advanced": "No", "internal": "No"}
+
+addFeature  {"feature": "ISIN_NUM", "class": "ISSUED_ID", "behavior": "F1E", "anonymize": "No", "candidates": "Yes", "standardize": "", "expression": "", "comparison": "EXACT_COMP", "elementList": [{"element": "ID_NUM", "expressed": "No", "compared": "Yes"}]}
+addAttribute {"attribute": "ISIN_NUMBER", "class": "IDENTIFIER", "feature": "ISIN_NUM", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
+
+addAttribute {"attribute": "IMO_NUMBER", "class": "IDENTIFIER", "feature": "IMO_NUM", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
+addAttribute {"attribute": "MMSI_NUMBER", "class": "IDENTIFIER", "feature": "MMSI_NUM", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
+
+addFeature  {"feature": "AIRCRAFT_MSN", "class": "ISSUED_ID", "behavior": "F1E", "anonymize": "No", "candidates": "Yes", "standardize": "", "expression": "", "comparison": "EXACT_COMP", "elementList": [{"element": "ID_NUM", "expressed": "No", "compared": "Yes"}]}
+addAttribute {"attribute": "AIRCRAFT_MSN", "class": "IDENTIFIER", "feature": "AIRCRAFT_MSN", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
+
+addFeature  {"feature": "AIRCRAFT_TAIL_NUMBER", "class": "ISSUED_ID", "behavior": "F1", "anonymize": "No", "candidates": "Yes", "standardize": "", "expression": "", "comparison": "EXACT_COMP", "elementList": [{"element": "ID_NUM", "expressed": "No", "compared": "Yes"}]}
+addAttribute {"attribute": "AIRCRAFT_TAIL_NUMBER", "class": "IDENTIFIER", "feature": "AIRCRAFT_TAIL_NUMBER", "element": "ID_NUM", "required": "Yes", "default": "", "advanced": "No", "internal": "No"}
 
 save
 updateDatabase
