--- a/.pylintrc
+++ b/.pylintrc
@@ -18,6 +18,7 @@ disable=
     redefined-builtin,
     redefined-outer-name,
     too-many-branches,
+    too-many-lines,
     too-many-locals,
     too-many-nested-blocks,
     too-many-return-statements,
