--- a/.pylintrc
+++ b/.pylintrc
@@ -28,6 +28,8 @@ disable=
     unused-import,
     unused-variable,
     useless-return,
+    too-many-lines,
+    broad-exception-caught,
 good-names=
     template-python
 ignore=
