Consolidate data sources to DJ-TRI and update pylint config

--- a/.pylintrc
+++ b/.pylintrc
@@ -29,6 +29,7 @@ disable=
     unused-import,
     unused-variable,
     useless-return,
+    broad-exception-caught,
 good-names=
     template-python
 ignore=
